# OTUS_CPP_04

./: .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  annotated.html  annotated_dup.js  bintray.json  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  endianess_8h.html  endianess_8h.js  endianess_8h__dep__incl.map  endianess_8h__dep__incl.md5  endianess_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaceotus.html  namespaces.html  navtreedata.js  navtreeindex0.js  own__type__traits_8h.html  own__type__traits_8h.js  own__type__traits_8h__dep__incl.map  own__type__traits_8h__dep__incl.md5  own__type__traits_8h__incl.map  (+36 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  files_2.js  files_3.js  functions_0.js  functions_2.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: endianess.h  main.cpp  own_type_traits.h  print_ip.h  print_otus_case.h
test/: CMakeLists.txt  EndianessTest.cpp  OwnTypeTraitsTest.cpp  PrintIPTest.cpp
